--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="Credit">Weather information provided by World Weather Online</string>
+    <string name="Prefs">Preferences</string>
+    <string name="save">Save Preferences</string>
+    <string name="saveButton">buttonSave</string>
+    <string name="ProfileInstructions">Create a new profile or select one from the list</string>
+    <string name="profieName">Profile Name</string>
+    <string name="umbrella">Umbrella</string>
+    <string name="coat">Coat</string>
+    <string name="sunScreen">SunScreen</string>
+    <string name="snow">Snow</string>
 </resources>
