--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="coat">Coat</string>
     <string name="sunScreen">SunScreen</string>
     <string name="snow">Snow</string>
+    <string name="profiles">Create Profile</string>
 </resources>
