Added support for celsius. Minor UI tweeks.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="sunScreen">Sunscreen</string>
     <string name="snow">Snow</string>
     <string name="profiles">Create Profile</string>
+    <string name="percent">As a percentage</string>
+    <string name="degrees"> In degrees Fahrenheit</string>
+    <string name="celsius"> Use degrees celsius</string>
 </resources>
